--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <h2 class="team__title">Команда</h2>
           <ul class="team__list">
             <li class="team__item">
-              <button class="team__name  team__name--active">
+              <button class="team__name">
                 Дэниэл Редклиф
               </button>
               <div class="team__people-decription">
@@ -303,7 +303,7 @@
             </div>
           </li>
           <li class="menu__item">
-            <button class="menu__cover  menu__cover--active  menu__cover--vegan">
+            <button class="menu__cover  menu__cover--vegan">
               <span class="menu__type-title">
                 Вегетарианское
               </span>
@@ -354,16 +354,15 @@
           <li class="reviews__item">
             <img class="reviews__avatar" src="/images/authors/author-1.png">
             <div class="reviews__preview">
-              <h3 class="reviews__autor-name">Константин Спилберг</h3>
-              <p class="reviews__info">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки
-                могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+              <h3 class="reviews__autor-name">Анна Воронина</h3>
+              <p class="reviews__info">В зависимости от контента в отзыве меняется и контект в попапе.</p>
               <button type="button" class="buy-button  buy-button--more">Подробнее</button>
             </div>
           </li>
           <li class="reviews__item">
             <img class="reviews__avatar" src="/images/authors/author-2.png">
             <div class="reviews__preview">
-              <h3 class="reviews__autor-name">Константин Спилберг</h3>
+              <h3 class="reviews__autor-name">Пётр Васильев</h3>
               <p class="reviews__info">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки
                 могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
               <button type="button" class="buy-button  buy-button--more">Подробнее</button>
