--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <meta name="theme-color" content="#ffffff">
 
   <link href="/css/main.css" rel="stylesheet">
+  
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
+  </script>
 </head>
 
 <body>
@@ -515,6 +518,7 @@
     </section>
 
     <section class="section  footer" id="contacts">
+      <div class="footer__map" id="map"></div>
       <footer class="footer__main-footer">
         <div class="container  container--footer">
           <div class="footer__flex-wrapper">
@@ -576,6 +580,9 @@
     </nav>
 
     </div>
+
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
+    </script>
 
     <script src="/main.js" async></script>
 
